--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "engines": {
     "node": ">=0.10"
   },
-  "author": "Jason Ozias <jason.g.ozias@gmail.com>",
+  "author": "lawrence <workwith.n@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md"
 }
