--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jdbc-altibase",
-  "version": "0.8.37",
+  "version": "0.8.38",
   "description": "Node Module JDBC wrapper",
   "main": "index.js",
   "dependencies": {
     "async": "~3.2.0",
     "java": "^0.12.1",
     "lodash": "4.17.21",
+    "promise-timeout": "^1.3.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
